test/files/neg/t3507.check
t3507.scala:13: error: could not find implicit value for evidence parameter of type Manifest[object _1.b.c]
  mani/*[object _1.b.c]*/(c) // kaboom in manifestOfType / TreeGen.mkAttributedQualifier
                         ^
one error found
